prototypes/echo-server/ytt/ingressroute.yaml
#@ load("@ytt:data", "data")
#@ domain = "echo." + data.values.shared.domain
#@ traefikLB = "lb." + data.values.shared.domain
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo
  annotations:
    external-dns.alpha.kubernetes.io/target: #@ traefikLB
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: #@ "Host(`{}`)".format(domain)
    priority: 10
    services:
      - name: echo-server
        port: 8080
        scheme: http
        passHostHeader: true
